# Homework2_rl25

./: README.md
aruco_ros/aruco_ros/launch/: single.launch.py
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py
ros2_iiwa/iiwa_description/config/: initial_positions.yaml
ros2_iiwa/iiwa_description/gazebo/worlds/: aruco.world  empty.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_interfaces/: CMakeLists.txt  package.xml
ros2_kdl_interfaces/action/: ExecuteLinearTraj.action
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/config/: params.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: kdl_node.launch.py
ros2_kdl_package/src/: execute_linear_traj_client.cpp  kdl_control.cpp  ros2_kdl_node.cpp
