<?xml version="1.0"?>
<package format="3">
  <name>ros2_kdl_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for KDL demo</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

